read files update

--- a/doc/QC_baseline.Rmd
+++ b/doc/QC_baseline.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "QC baseline"
+title: "QC baseline data"
 author: "Sara Elizabeth Stinson"
 date: "01/12/2021"
 output: html_document
@@ -12,7 +12,16 @@ source(here::here("R/package-loading.R"))
 
 ```{r load data, warning = FALSE, echo = false}
 
-## LOAD CVDII PANEL BATCH 1 (N = 645)
-CVDB1_NPX_data <- OlinkAnalyze::read_NPX(filename = "/Volumes/mjl259/1_Cohorts/1_TARGET/2_Projects/2_Olink_Proteomics/2_Raw_Data/Sent_from_Olink/CVDII_645/20191262_Stinson_NPX.xlsx")
+## LOAD CVDII DATA - BATCH 1 (N = 645) ##
+CVDB1_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data/20191262_Stinson_NPX.xlsx"))
+
+## LOAD INF DATA - BATCH 1 (N = 645)
+INFB1_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data/20210107_Stinson_NPX.xlsx"))
+
+## LOAD CVDII + INF DATA - BATCH 2 (N = 3,693) ##
+B2_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data/20202245_ Stinson_NPX.xlsx"))
+
+## LOAD CLINICAL DATA ##
+baseline_dataset <- read.csv(here::here("data/TDCOB_clean_SaraStinson_20200524.csv"), header = T, sep = ";", dec = "," )
 
 ```
