--- a/doc/QC_baseline.Rmd
+++ b/doc/QC_baseline.Rmd
@@ -12,16 +12,13 @@ source(here::here("R/package-loading.R"))
 
 ```{r load data, warning = FALSE, echo = false}
 
-## LOAD CVDII DATA - BATCH 1 (N = 645) ##
+## LOAD CVDII DATA - BATCH 1 
 CVDB1_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data/20191262_Stinson_NPX.xlsx"))
 
-## LOAD INF DATA - BATCH 1 (N = 645)
+## LOAD INF DATA - BATCH 1 
 INFB1_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data/20210107_Stinson_NPX.xlsx"))
 
-## LOAD CVDII + INF DATA - BATCH 2 (N = 3,693) ##
+## LOAD CVDII + INF DATA - BATCH 2
 B2_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data/20202245_ Stinson_NPX.xlsx"))
-
-## LOAD CLINICAL DATA ##
-baseline_dataset <- read.csv(here::here("data/TDCOB_clean_SaraStinson_20200524.csv"), header = T, sep = ";", dec = "," )
 
 ```
