--- a/doc/QC_baseline.Rmd
+++ b/doc/QC_baseline.Rmd
@@ -10,22 +10,22 @@ knitr::opts_chunk$set(echo = TRUE)
 source(here::here("R/package-loading.R"))
 ```
 
-```{r load data, warning = FALSE, echo = false}
+```{r Load Data, warning = FALSE, echo = FALSE}
 
 ## LOAD CVDII DATA - BATCH 1 
-CVDB1_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data/20191262_Stinson_NPX.xlsx"))
+CVDB1_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data-raw/20191262_Stinson_NPX.xlsx"))
 
 ## LOAD INF DATA - BATCH 1 
-INFB1_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data/20210107_Stinson_NPX.xlsx"))
+INFB1_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data-raw/20210107_Stinson_NPX.xlsx"))
 
 ## LOAD CVDII + INF DATA - BATCH 2
-B2_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data/20202245_ Stinson_NPX.xlsx"))
+B2_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data-raw/20202245_Stinson_NPX.xlsx"))
 
 ```
 
-```{r Bridge normalization, warning = FALSE, echo = false}
+```{r CVDII Bridge Normalization, warning = FALSE, echo = FALSE}
 
-## Select only the CVD II panel from batch 2
+## Select CVDII Panel from Batch 2
 CVDB2_NPX_data <- B2_NPX_data %>%
   dplyr::filter(Panel == 'Olink Target 96 Cardiovascular II')
 
@@ -36,15 +36,54 @@ CVD_npx_df2 <- CVDB2_NPX_data %>% dplyr::mutate(Project = '20202245')
 overlap_samples <- intersect((CVD_npx_df1 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID,
                              (CVD_npx_df2 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID)
 
-CVD_bridged_df <- OlinkAnalyze::olink_normalization(df1 = CVD_npx_df1,
+CVD_bridge <- OlinkAnalyze::olink_normalization(df1 = CVD_npx_df1,
                       df2 = CVD_npx_df2,
                       overlapping_samples_df1 = overlap_samples,
                       df1_project_nr = '20191262',
                       df2_project_nr = '20202245',
                       reference_project = '20191262')
 
+## Rename
+rename_CVD <- CVD_bridge %>%
+  dplyr::mutate(Assay = gsub("-", "", Assay)) %>%
+  dplyr::mutate(Assay = gsub(" ", "_", Assay)) %>%
+  dplyr::mutate(Assay = gsub("alpha", "a", Assay)) %>%
+  dplyr::mutate(Assay = gsub("beta", "b", Assay)) %>%
+  dplyr::mutate(Assay = gsub("gamma", "g", Assay)) %>%
+  dplyr::mutate(Panel = gsub('Olink CARDIOVASCULAR II', 'Olink Target 96 Cardiovascular II', Panel))
 
-## Select only INF panel from batch 2
+## QC plot
+OlinkAnalyze::olink_qc_plot(rename_CVD)
+
+## Replace Values Below LOD
+CVD_LOD <- rename_CVD %>%
+    mutate(corrected_NPX = if_else(LOD > NPX, LOD/2, NPX))
+
+## Filter QC_Warning, CONTROL_SAMPLE, MissingFreq
+CVD_LOD$MissingFreq <- as.numeric(CVD_LOD$MissingFreq) # convert from chr to num
+str(CVD_LOD$MissingFreq)
+
+table(CVD_LOD$MissingFreq)
+
+CVD_long <- CVD_LOD %>%
+dplyr::filter(QC_Warning != "Warning") %>%
+  dplyr::filter(!str_detect(SampleID, 'CONTROL_SAMPLE')) %>%
+  dplyr::filter(MissingFreq < 0.30)
+
+## Convert from long to wide
+CVD_wide <- CVD_long %>%
+  dplyr::select(SampleID, Assay, PlateID, Panel, corrected_NPX, QC_Warning, Project) %>%
+  pivot_wider(names_from = Assay,
+              values_from = corrected_NPX) %>% 
+  distinct(SampleID, .keep_all = TRUE) # removes duplicate bridging samples
+
+summary(CVD_wide)
+
+```
+
+```{r INF Bridge Normalization, warning = FALSE, echo = FALSE}
+
+## Select INF Panel from Batch 2
 INFB2_NPX_data <- B2_NPX_data %>%
   dplyr::filter(Panel == 'Olink Target 96 Inflammation')
 
@@ -55,26 +94,75 @@ INF_npx_df2 <- INFB2_NPX_data %>% dplyr::mutate(Project = '20202245')
 overlap_samples <- intersect((INF_npx_df1 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID,
                              (INF_npx_df2 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID)
 
-INF_bridged_df <- OlinkAnalyze::olink_normalization(df1 = INF_npx_df1,
+INF_bridge <- OlinkAnalyze::olink_normalization(df1 = INF_npx_df1,
                       df2 = INF_npx_df2,
                       overlapping_samples_df1 = overlap_samples,
                       df1_project_nr = '20191262',
                       df2_project_nr = '20202245',
                       reference_project = '20191262')
 
-## Rename proteins
-renamed_CVD_bridged_df <- CVD_bridged_df %>%
+## Rename
+rename_INF <- INF_bridge %>%
   dplyr::mutate(Assay = gsub("-", "", Assay)) %>%
   dplyr::mutate(Assay = gsub(" ", "_", Assay)) %>%
   dplyr::mutate(Assay = gsub("alpha", "a", Assay)) %>%
   dplyr::mutate(Assay = gsub("beta", "b", Assay)) %>%
   dplyr::mutate(Assay = gsub("gamma", "g", Assay))
 
-renamed_INF_bridged_df <- INF_bridged_df %>%
-  dplyr::mutate(Assay = gsub("-", "", Assay)) %>%
-  dplyr::mutate(Assay = gsub(" ", "_", Assay)) %>%
-  dplyr::mutate(Assay = gsub("alpha", "a", Assay)) %>%
-  dplyr::mutate(Assay = gsub("beta", "b", Assay)) %>%
-  dplyr::mutate(Assay = gsub("gamma", "g", Assay))
+## QC plot
+OlinkAnalyze::olink_qc_plot(rename_INF)
+
+## Replace Values Below LOD
+INF_LOD <- rename_INF %>%
+    mutate(corrected_NPX = if_else(LOD > NPX, LOD/2, NPX))
+
+## Filter QC_Warning, CONTROL_SAMPLE, MissingFreq
+INF_LOD$MissingFreq <- as.numeric(INF_LOD$MissingFreq) # convert from chr to num
+table(INF_LOD$MissingFreq)
+ 
+INF_long <- INF_LOD %>%
+dplyr::filter(QC_Warning != "Warning") %>%
+  dplyr::filter(!str_detect(SampleID, 'CONTROL_SAMPLE')) %>%
+  dplyr::filter(MissingFreq < 0.30)
+
+## Convert from long to wide
+INF_wide <- INF_long %>%
+  dplyr::select(SampleID, Assay, PlateID, Panel, corrected_NPX, QC_Warning, Project) %>%
+  pivot_wider(names_from = Assay,
+              values_from = corrected_NPX) %>% 
+  distinct(SampleID, .keep_all = TRUE) # removes duplicate bridging samples
+
+summary(INF_wide)
 
 ```
+
+```{r Merge Panels, warning = FALSE, echo = FALSE}
+
+## Merge CVDII + INF Panels
+merge_panels <- full_join(CVD_wide, INF_wide, by = c("SampleID", "QC_Warning", "Project"))
+
+## Remove Duplicated Proteins
+merge_rename <- merge_panels %>% 
+  dplyr::rename(plateID_CVDII = PlateID.x,
+                plateID_INF = PlateID.y,
+                Panel_CVDII = Panel.x,
+                Panel_INF = Panel.y,
+                blood_sample_ID = SampleID) %>% 
+  dplyr::select(-CXCL1.y, -SCF.y, -IL18.y, -FGF21.y, -CCL3.y) %>% # Remove proteins from INF panel (higher MissingFreq)
+  dplyr::rename(CXCL1 = CXCL1.x,
+                SCF = SCF.x,
+                IL18 = IL18.x,
+                FGF21 = FGF21.x,
+                CCL3 = CCL3.x)
+
+## Reorder Data
+olink_df <- merge_rename %>% 
+  dplyr::relocate(blood_sample_ID, Project, Panel_CVDII, plateID_CVDII, Panel_INF, plateID_INF, QC_Warning)
+
+## Save QC'd Data
+write.table(olink_df, file = here::here("data/olink_CVDII_INF_baseline_plasma.txt"), 
+            sep = "\t", quote = F)
+
+```
+
+
