--- a/doc/QC_baseline.Rmd
+++ b/doc/QC_baseline.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "QC baseline data"
+title: "QC baseline olink data"
 author: "Sara Elizabeth Stinson"
 date: "01/12/2021"
 output: html_document
@@ -26,8 +26,7 @@ B2_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data-raw/20202245_S
 ```{r CVDII Bridge Normalization, warning = FALSE, echo = FALSE}
 
 ## Select CVDII Panel from Batch 2
-CVDB2_NPX_data <- B2_NPX_data %>%
-  dplyr::filter(Panel == 'Olink Target 96 Cardiovascular II')
+CVDB2_NPX_data <- B2_NPX_data %>% dplyr::filter(Panel == 'Olink Target 96 Cardiovascular II')
 
 ## CVDII Bridge Normalization
 CVD_npx_df1 <- CVDB1_NPX_data %>% dplyr::mutate(Project = '20191262')
@@ -36,12 +35,14 @@ CVD_npx_df2 <- CVDB2_NPX_data %>% dplyr::mutate(Project = '20202245')
 overlap_samples <- intersect((CVD_npx_df1 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID,
                              (CVD_npx_df2 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID)
 
-CVD_bridge <- OlinkAnalyze::olink_normalization(df1 = CVD_npx_df1,
-                      df2 = CVD_npx_df2,
-                      overlapping_samples_df1 = overlap_samples,
-                      df1_project_nr = '20191262',
-                      df2_project_nr = '20202245',
-                      reference_project = '20191262')
+CVD_bridge <- OlinkAnalyze::olink_normalization(
+  df1 = CVD_npx_df1,
+  df2 = CVD_npx_df2,
+  overlapping_samples_df1 = overlap_samples,
+  df1_project_nr = '20191262',
+  df2_project_nr = '20202245',
+  reference_project = '20191262'
+)
 
 ## Rename
 rename_CVD <- CVD_bridge %>%
@@ -59,33 +60,29 @@ OlinkAnalyze::olink_qc_plot(rename_CVD)
 CVD_LOD <- rename_CVD %>%
     mutate(corrected_NPX = if_else(LOD > NPX, LOD/2, NPX))
 
-## Filter QC_Warning, CONTROL_SAMPLE, MissingFreq
-CVD_LOD$MissingFreq <- as.numeric(CVD_LOD$MissingFreq) # convert from chr to num
-str(CVD_LOD$MissingFreq)
-
-table(CVD_LOD$MissingFreq)
-
+## Filter QC_Warning, CONTROL_SAMPLE, MissingProp
 CVD_long <- CVD_LOD %>%
 dplyr::filter(QC_Warning != "Warning") %>%
   dplyr::filter(!str_detect(SampleID, 'CONTROL_SAMPLE')) %>%
-  dplyr::filter(MissingFreq < 0.30)
+  group_by(Assay) %>%
+  dplyr::mutate(no_missing_obs = sum(is.na(corrected_NPX) | NPX < LOD),
+         total_obs = length(corrected_NPX)) %>%
+  dplyr::mutate(MissingProp = no_missing_obs/total_obs) %>% # calculates the global MissingFreq
+  dplyr::filter(MissingProp < 0.90) # Removes proteins with more than 90% MissingProp
 
-## Convert from long to wide
+## Convert from long to wide format
 CVD_wide <- CVD_long %>%
   dplyr::select(SampleID, Assay, PlateID, Panel, corrected_NPX, QC_Warning, Project) %>%
   pivot_wider(names_from = Assay,
               values_from = corrected_NPX) %>% 
   distinct(SampleID, .keep_all = TRUE) # removes duplicate bridging samples
 
-summary(CVD_wide)
-
 ```
 
 ```{r INF Bridge Normalization, warning = FALSE, echo = FALSE}
 
 ## Select INF Panel from Batch 2
-INFB2_NPX_data <- B2_NPX_data %>%
-  dplyr::filter(Panel == 'Olink Target 96 Inflammation')
+INFB2_NPX_data <- B2_NPX_data %>% dplyr::filter(Panel == 'Olink Target 96 Inflammation')
 
 ## INF Bridge Normalization
 INF_npx_df1 <- INFB1_NPX_data %>% dplyr::mutate(Project = '20191262')
@@ -94,12 +91,14 @@ INF_npx_df2 <- INFB2_NPX_data %>% dplyr::mutate(Project = '20202245')
 overlap_samples <- intersect((INF_npx_df1 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID,
                              (INF_npx_df2 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID)
 
-INF_bridge <- OlinkAnalyze::olink_normalization(df1 = INF_npx_df1,
-                      df2 = INF_npx_df2,
-                      overlapping_samples_df1 = overlap_samples,
-                      df1_project_nr = '20191262',
-                      df2_project_nr = '20202245',
-                      reference_project = '20191262')
+INF_bridge <- OlinkAnalyze::olink_normalization(
+  df1 = INF_npx_df1,
+  df2 = INF_npx_df2,
+  overlapping_samples_df1 = overlap_samples,
+  df1_project_nr = '20191262',
+  df2_project_nr = '20202245',
+  reference_project = '20191262'
+)
 
 ## Rename
 rename_INF <- INF_bridge %>%
@@ -116,23 +115,22 @@ OlinkAnalyze::olink_qc_plot(rename_INF)
 INF_LOD <- rename_INF %>%
     mutate(corrected_NPX = if_else(LOD > NPX, LOD/2, NPX))
 
-## Filter QC_Warning, CONTROL_SAMPLE, MissingFreq
-INF_LOD$MissingFreq <- as.numeric(INF_LOD$MissingFreq) # convert from chr to num
-table(INF_LOD$MissingFreq)
- 
+## Filter QC_Warning, CONTROL_SAMPLE, MissingProp
 INF_long <- INF_LOD %>%
 dplyr::filter(QC_Warning != "Warning") %>%
   dplyr::filter(!str_detect(SampleID, 'CONTROL_SAMPLE')) %>%
-  dplyr::filter(MissingFreq < 0.30)
+  group_by(Assay) %>%
+  dplyr::mutate(no_missing_obs = sum(is.na(corrected_NPX) | NPX < LOD),
+         total_obs = length(corrected_NPX)) %>%
+  dplyr::mutate(MissingProp = no_missing_obs/total_obs) %>% # calculates the global MissingFreq
+  dplyr::filter(MissingProp < 0.90) # Removes proteins with more than 90% MissingProp
 
-## Convert from long to wide
+## Convert from long to wide format
 INF_wide <- INF_long %>%
   dplyr::select(SampleID, Assay, PlateID, Panel, corrected_NPX, QC_Warning, Project) %>%
   pivot_wider(names_from = Assay,
               values_from = corrected_NPX) %>% 
   distinct(SampleID, .keep_all = TRUE) # removes duplicate bridging samples
-
-summary(INF_wide)
 
 ```
 
@@ -148,8 +146,9 @@ merge_rename <- merge_panels %>%
                 Panel_CVDII = Panel.x,
                 Panel_INF = Panel.y,
                 blood_sample_ID = SampleID) %>% 
-  dplyr::select(-CXCL1.y, -SCF.y, -IL18.y, -FGF21.y, -CCL3.y) %>% # Remove proteins from INF panel (higher MissingFreq)
-  dplyr::rename(CXCL1 = CXCL1.x,
+  dplyr::select(-IL6.y, -CXCL1.y, -SCF.y, -IL18.y, -FGF21.y, -CCL3.y) %>% # Remove duplicate proteins from INF panel (higher MissingFreq)
+  dplyr::rename(IL6 = IL6.x,
+                CXCL1 = CXCL1.x,
                 SCF = SCF.x,
                 IL18 = IL18.x,
                 FGF21 = FGF21.x,
@@ -160,9 +159,6 @@ olink_df <- merge_rename %>%
   dplyr::relocate(blood_sample_ID, Project, Panel_CVDII, plateID_CVDII, Panel_INF, plateID_INF, QC_Warning)
 
 ## Save QC'd Data
-write.table(olink_df, file = here::here("data/olink_CVDII_INF_baseline_plasma.txt"), 
-            sep = "\t", quote = F)
+write.table(olink_df, file = here::here("data/olink_CVDII_INF_baseline_plasma.txt"), sep = "\t", quote = F)
 
 ```
-
-
