--- a/doc/QC_baseline.Rmd
+++ b/doc/QC_baseline.Rmd
@@ -7,10 +7,6 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-```
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
 source(here::here("R/package-loading.R"))
 ```
 
@@ -38,13 +34,15 @@ bridge_key <- read.table(file = here::here("data/bridge_key.txt"), header = T)
 ## Select CVDII Panel from Batch 2
 CVDB2_NPX_data <- B2_NPX_data %>% dplyr::filter(Panel == 'Olink Target 96 Cardiovascular II')
 
-## CVDII Bridge Normalization
+## Add Project Numbers
 CVD_npx_df1 <- CVDB1_NPX_data %>% dplyr::mutate(Project = '20191262')
 CVD_npx_df2 <- CVDB2_NPX_data %>% dplyr::mutate(Project = '20202245')
 
+## Identify Bridging Samples
 overlap_samples <- intersect((CVD_npx_df1 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID,
                              (CVD_npx_df2 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID)
 
+## CVDII Bridge Normalization
 CVD_bridge <- OlinkAnalyze::olink_normalization(
   df1 = CVD_npx_df1,
   df2 = CVD_npx_df2,
@@ -61,13 +59,15 @@ CVD_bridge <- OlinkAnalyze::olink_normalization(
 ## Select INF Panel from Batch 2
 INFB2_NPX_data <- B2_NPX_data %>% dplyr::filter(Panel == 'Olink Target 96 Inflammation')
 
-## INF Bridge Normalization
+## Add Project Numbers
 INF_npx_df1 <- INFB1_NPX_data %>% dplyr::mutate(Project = '20191262')
 INF_npx_df2 <- INFB2_NPX_data %>% dplyr::mutate(Project = '20202245')
 
+## Identify Bridging Samples
 overlap_samples <- intersect((INF_npx_df1 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID,
                              (INF_npx_df2 %>% filter(!grepl("control", SampleID, ignore.case=T)))$SampleID)
 
+## INF Bridge Normalization
 INF_bridge <- OlinkAnalyze::olink_normalization(
   df1 = INF_npx_df1,
   df2 = INF_npx_df2,
@@ -79,13 +79,16 @@ INF_bridge <- OlinkAnalyze::olink_normalization(
 
 ```
 
-```{r CVDII + INF 30 Reruns Bridge Normalization}
+```{r CVDII + INF Reruns Bridge Normalization, warning = FALSE, echo = FALSE}
 
+## Removing Other MicrobLiver Cohorts
 MLRR_NPX_data <- MLRR_NPX_data[!grepl("RDC", MLRR_NPX_data$SampleID),] # Remove RDC Samples
 MLRR_NPX_data <- MLRR_NPX_data[!grepl("PRF", MLRR_NPX_data$SampleID),] # Remove PRF samples
 
+## Add Bridge Key
 MLRRb_NPX_data <- full_join(MLRR_NPX_data, bridge_key, by = "SampleID")
 
+## Add Project Number and Format
 MLRRb_NPX_data <- MLRRb_NPX_data %>%
   dplyr::mutate(SampleID = coalesce(OGSampleID, SampleID)) %>%
   dplyr::select(-OGSampleID) %>%
@@ -93,12 +96,14 @@ MLRRb_NPX_data <- MLRRb_NPX_data %>%
   dplyr::mutate(SampleID = gsub("HOL-", "", SampleID)) %>%
   dplyr::mutate(SampleID = gsub("-RR", "", SampleID))
 
+## Identify Bridge Samples
 bridge_samples <- bridge_key$OGSampleID
 
-## CVDII Panel Reruns
+## Select CVDII Panel from Reruns
 CVD_npx_df3 <- MLRRb_NPX_data %>% 
   dplyr::filter(Panel == 'Olink Target 96 Cardiovascular II')
 
+## CVDII Rerun Bridge Normalization
 CVDRR_bridge <- OlinkAnalyze::olink_normalization(
   df1 = CVD_npx_df1,
   df2 = CVD_npx_df3,
@@ -108,12 +113,14 @@ CVDRR_bridge <- OlinkAnalyze::olink_normalization(
   reference_project = '20191262'
 )
 
+## Remove Bridge Samples
 CVDRR_bridge <- dplyr::filter(CVDRR_bridge, (!SampleID %in% bridge_samples))
 
-## INF Panel Reruns
+## Select INF Panel from Reruns
 INF_npx_df3 <- MLRRb_NPX_data %>% 
   dplyr::filter(Panel == 'Olink Target 96 Inflammation')
 
+## INF Rerun Bridge Normalization
 INFRR_bridge <- OlinkAnalyze::olink_normalization(
   df1 = INF_npx_df1,
   df2 = INF_npx_df3,
@@ -123,13 +130,14 @@ INFRR_bridge <- OlinkAnalyze::olink_normalization(
   reference_project = '20191262'
 )
 
+## Remove Bridge Samples
 INFRR_bridge <- dplyr::filter(INFRR_bridge, (!SampleID %in% bridge_samples))
 
 ```
 
-```{r Merge CVDII panel batches}
+```{r Merge CVDII Panel Bridged Batches, warning = FALSE, echo = FALSE}
 
-## Merge CVDII data
+## Merge CVDII Panel Batches
 merge_CVD_panels  <- CVD_bridge %>%
   dplyr::full_join(CVDRR_bridge) %>%
   dplyr::mutate(Assay = gsub("-", "", Assay)) %>%
@@ -147,7 +155,7 @@ CVD_qc <- merge_CVD_panels %>%
   dplyr::mutate(corrected_NPX = if_else(LOD > NPX, LOD/2, NPX)) %>%
   dplyr::filter(QC_Warning != "Warning") %>%
   dplyr::filter(!str_detect(SampleID, 'CONTROL_SAMPLE')) %>%
-  group_by(Assay) %>%
+  dplyr::group_by(Assay) %>%
   dplyr::mutate(no_missing_obs = sum(is.na(corrected_NPX) | NPX < LOD),
          total_obs = length(corrected_NPX)) %>%
   dplyr::mutate(MissingProp = no_missing_obs/total_obs) %>% # calculates the global MissingFreq
@@ -160,13 +168,13 @@ CVD_wide <- CVD_qc %>%
               values_from = corrected_NPX) %>% 
   dplyr::rename(Panel_CVDII = Panel,
                 plateID_CVDII = PlateID) %>% 
-  distinct(SampleID, .keep_all = TRUE) # removes duplicate bridging samples
+  dplyr::distinct(SampleID, .keep_all = TRUE) # removes duplicate bridging samples
 
 ```
 
-```{r}
+```{r Merge INF Panel Bridged Batches, warning = FALSE, echo = FALSE}
 
-## Merge INF Panel batches
+## Merge INF Panel Batches
 merge_INF_panels  <- INF_bridge %>%
   dplyr::full_join(INFRR_bridge) %>%
   dplyr::mutate(Assay = gsub("-", "", Assay)) %>%
@@ -178,11 +186,12 @@ merge_INF_panels  <- INF_bridge %>%
 ## QC plot    
 OlinkAnalyze::olink_qc_plot(merge_INF_panels)
 
+## Apply QC
 INF_qc <- merge_INF_panels %>%
   dplyr::mutate(corrected_NPX = if_else(LOD > NPX, LOD/2, NPX)) %>%
   dplyr::filter(QC_Warning != "Warning") %>%
   dplyr::filter(!str_detect(SampleID, 'CONTROL_SAMPLE')) %>%
-  group_by(Assay) %>%
+  dplyr::group_by(Assay) %>%
   dplyr::mutate(no_missing_obs = sum(is.na(corrected_NPX) | NPX < LOD),
          total_obs = length(corrected_NPX)) %>%
   dplyr::mutate(MissingProp = no_missing_obs/total_obs) %>% # calculates the global MissingFreq
@@ -195,15 +204,15 @@ INF_wide <- INF_qc %>%
               values_from = corrected_NPX) %>% 
   dplyr::rename(Panel_INF = Panel,
                 plateID_INF = PlateID) %>% 
-  distinct(SampleID, .keep_all = TRUE) # removes duplicate bridging samples
+  dplyr::distinct(SampleID, .keep_all = TRUE) # removes duplicate bridging samples
 
 ```
 
-```{r Merge CVDII + INF Panels}
+```{r Merge CVDII + INF Panels, warning = FALSE, echo = FALSE}
 
 ## Merge CVDII + INF Panels
 olink_df <- INF_wide %>%
-  dplyr::select(-IL6, - CXCL1, -SCF, -IL18, -FGF21, -CCL3) %>% # remove duplicate proteins from INF panel
+  dplyr::select(-IL6, - CXCL1, -SCF, -IL18, -FGF21, -CCL3) %>% # Remove 6 duplicate proteins from INF panel
   dplyr::full_join(CVD_wide) %>%
   dplyr::rename(blood_sample_ID = SampleID) %>%
   dplyr::relocate(blood_sample_ID, Project, Panel_INF, plateID_INF, Panel_CVDII, plateID_CVDII, QC_Warning)
@@ -212,7 +221,3 @@ olink_df <- INF_wide %>%
 write.table(olink_df, file = here::here("data/olink_CVDII_INF_baseline_plasma.txt"), sep = "\t", quote = F)
 
 ```
-
-> Summary:
-* 163 out of 184 proteins following QC (21 proteins were removed)
-* 4,334 individuals (645 in batch 1, 3,677 in batch 2, 30 in batch 3 reruns)
