--- a/doc/QC_baseline.Rmd
+++ b/doc/QC_baseline.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 source(here::here("R/package-loading.R"))
 ```
 
-```{r Load Data, warning = FALSE, echo = FALSE}
+```{r Load Data, warning = FALSE, message = FALSE}
 
 ## LOAD CVDII DATA - BATCH 1
 CVDB1_NPX_data <- OlinkAnalyze::read_NPX(filename = here::here("data-raw/20191262_Stinson_NPX.xlsx"))
@@ -29,7 +29,7 @@ bridge_key <- read.table(file = here::here("data/bridge_key.txt"), header = T)
 
 ```
 
-```{r CVDII Bridge Normalization, warning = FALSE, echo = FALSE}
+```{r CVDII Bridge Normalization, warning = FALSE, message = FALSE}
 
 ## Select CVDII Panel from Batch 2
 CVDB2_NPX_data <- B2_NPX_data %>% dplyr::filter(Panel == 'Olink Target 96 Cardiovascular II')
@@ -54,7 +54,7 @@ CVD_bridge <- OlinkAnalyze::olink_normalization(
 
 ```
 
-```{r INF Bridge Normalization, warning = FALSE, echo = FALSE}
+```{r INF Bridge Normalization, warning = FALSE, message = FALSE}
 
 ## Select INF Panel from Batch 2
 INFB2_NPX_data <- B2_NPX_data %>% dplyr::filter(Panel == 'Olink Target 96 Inflammation')
@@ -79,7 +79,7 @@ INF_bridge <- OlinkAnalyze::olink_normalization(
 
 ```
 
-```{r CVDII + INF Reruns Bridge Normalization, warning = FALSE, echo = FALSE}
+```{r CVDII + INF Reruns Bridge Normalization, warning = FALSE, message = FALSE}
 
 ## Removing Other MicrobLiver Cohorts
 MLRR_NPX_data <- MLRR_NPX_data[!grepl("RDC", MLRR_NPX_data$SampleID),] # Remove RDC Samples
@@ -135,7 +135,7 @@ INFRR_bridge <- dplyr::filter(INFRR_bridge, (!SampleID %in% bridge_samples))
 
 ```
 
-```{r Merge CVDII Panel Bridged Batches, warning = FALSE, echo = FALSE}
+```{r Merge CVDII Panel Bridged Batches, warning = FALSE, message = FALSE}
 
 ## Merge CVDII Panel Batches
 merge_CVD_panels  <- CVD_bridge %>%
@@ -172,7 +172,7 @@ CVD_wide <- CVD_qc %>%
 
 ```
 
-```{r Merge INF Panel Bridged Batches, warning = FALSE, echo = FALSE}
+```{r Merge INF Panel Bridged Batches, warning = FALSE, message = FALSE}
 
 ## Merge INF Panel Batches
 merge_INF_panels  <- INF_bridge %>%
@@ -208,7 +208,7 @@ INF_wide <- INF_qc %>%
 
 ```
 
-```{r Merge CVDII + INF Panels, warning = FALSE, echo = FALSE}
+```{r Merge CVDII + INF Panels, warning = FALSE, message = FALSE}
 
 ## Merge CVDII + INF Panels
 olink_df <- INF_wide %>%
