remove corr_NPX, 20% missing freq, bridge normalize to 1st batch

--- a/doc/QC_baseline.Rmd
+++ b/doc/QC_baseline.Rmd
@@ -49,8 +49,11 @@ CVD_bridge <- OlinkAnalyze::olink_normalization(
   overlapping_samples_df1 = overlap_samples,
   df1_project_nr = '20191262',
   df2_project_nr = '20202245',
-  reference_project = '20191262'
+  reference_project = '20202245' # Bridge using the larger batch
 )
+
+CVD_filter <- CVD_bridge %>% 
+  dplyr::filter(is.na(NPX))
 
 ```
 
@@ -74,8 +77,11 @@ INF_bridge <- OlinkAnalyze::olink_normalization(
   overlapping_samples_df1 = overlap_samples,
   df1_project_nr = '20210107',
   df2_project_nr = '20202245',
-  reference_project = '20210107'
+  reference_project = '20202245' # Bridge using the larger batch
 )
+
+INF_filter <- INF_bridge %>% 
+  dplyr::filter(is.na(NPX))
 
 ```
 
@@ -105,12 +111,12 @@ CVD_npx_df3 <- MLRRb_NPX_data %>%
 
 ## CVDII Rerun Bridge Normalization
 CVDRR_bridge <- OlinkAnalyze::olink_normalization(
-  df1 = CVD_npx_df1,
-  df2 = CVD_npx_df3,
+  df1 = CVD_npx_df3,
+  df2 = CVD_npx_df2,
   overlapping_samples_df1 = bridge_samples,
-  df1_project_nr = '20191262',
-  df2_project_nr = '20212246',
-  reference_project = '20191262'
+  df1_project_nr = '20212246',
+  df2_project_nr = '20202245',
+  reference_project = '20202245' # Bridge using the larger batch
 )
 
 CVDRR <- CVDRR_bridge %>%
@@ -125,12 +131,12 @@ INF_npx_df3 <- MLRRb_NPX_data %>%
 
 ## INF Rerun Bridge Normalization
 INFRR_bridge <- OlinkAnalyze::olink_normalization(
-  df1 = INF_npx_df1,
-  df2 = INF_npx_df3,
+  df1 = INF_npx_df3,
+  df2 = INF_npx_df2,
   overlapping_samples_df1 = bridge_samples,
-  df1_project_nr = '20210107',
-  df2_project_nr = '20212246',
-  reference_project = '20210107'
+  df1_project_nr = '20212246',
+  df2_project_nr = '20202245',
+  reference_project = '20202245'
 )
 
 INFRR <- INFRR_bridge %>%
@@ -157,22 +163,21 @@ OlinkAnalyze::olink_qc_plot(merge_CVD_panels)
 
 ## Apply QC
 CVD_qc <- merge_CVD_panels %>%
-  dplyr::mutate(corrected_NPX = if_else(LOD > NPX, LOD/2, NPX)) %>%
   dplyr::filter(QC_Warning != "Warning") %>%
   dplyr::filter(!str_detect(SampleID, 'CONTROL_SAMPLE')) %>%
   dplyr::group_by(Assay) %>%
-  dplyr::mutate(no_missing_obs = sum(is.na(corrected_NPX) | NPX < LOD),
-         total_obs = length(corrected_NPX)) %>%
-  dplyr::mutate(MissingFreq = no_missing_obs/total_obs) #%>% # calculates the global MissingFreq
-  #dplyr::filter(MissingFreq < 0.90) # Removes proteins with more than 90% MissingFreq
+  dplyr::mutate(MissingFreq = (as.numeric(MissingFreq))) %>%
+  dplyr::mutate(no_missing_obs = sum(is.na(NPX) | NPX < LOD),
+                total_obs = length(NPX)) %>%
+  dplyr::mutate(GlobMissFreq = no_missing_obs / total_obs) %>%  # calculates the global MissingFreq
+  dplyr::filter(GlobMissFreq <= 0.20) # Removes proteins with more than 20 % global MissingFreq
 
 ## Convert from long to wide format
 CVD_wide <- CVD_qc %>%
   dplyr::select(SampleID, Assay, PlateID, NPX, QC_Warning) %>%
   pivot_wider(names_from = Assay,
               values_from = NPX) %>% 
-  dplyr::rename(plateID_CVDII = PlateID) %>% 
-  dplyr::distinct(SampleID, .keep_all = TRUE) # removes duplicate bridging samples
+  dplyr::rename(plateID_CVDII = PlateID)
 
 ```
 
@@ -187,27 +192,35 @@ merge_INF_panels  <- INF_bridge %>%
   dplyr::mutate(Assay = gsub("beta", "b", Assay)) %>%
   dplyr::mutate(Assay = gsub("gamma", "g", Assay))
 
-## QC plot    
+## QC plot  
 OlinkAnalyze::olink_qc_plot(merge_INF_panels)
 
 ## Apply QC
 INF_qc <- merge_INF_panels %>%
-  dplyr::mutate(corrected_NPX = if_else(LOD > NPX, LOD/2, NPX)) %>%
   dplyr::filter(QC_Warning != "Warning") %>%
   dplyr::filter(!str_detect(SampleID, 'CONTROL_SAMPLE')) %>%
   dplyr::group_by(Assay) %>%
-  dplyr::mutate(no_missing_obs = sum(is.na(corrected_NPX) | NPX < LOD),
-         total_obs = length(corrected_NPX)) %>%
-  dplyr::mutate(MissingFreq = no_missing_obs/total_obs) #%>% # calculates the global MissingFreq
-  #dplyr::filter(MissingFreq < 0.90) # Removes proteins with more than 90% MissingFreq
+  dplyr::mutate(MissingFreq = (as.numeric(MissingFreq))) %>%
+  dplyr::mutate(no_missing_obs = sum(is.na(NPX) | NPX < LOD),
+                total_obs = length(NPX)) %>%
+  dplyr::mutate(GlobMissFreq = no_missing_obs / total_obs) %>%  # calculates the global MissingFreq
+  dplyr::filter(
+    Assay != "IL6",
+    Assay != "CXCL1",
+    Assay != "SCF",
+    Assay != "IL18",
+    Assay != "FGF21",
+    Assay != "FGF23",
+    Assay != "CCL3"
+  ) %>%
+  dplyr::filter(GlobMissFreq <= 0.20) # Removes proteins with more than 20 % global MissingFreq
 
 ## Convert from long to wide format
 INF_wide <- INF_qc %>%
   dplyr::select(SampleID, Assay, PlateID, NPX, QC_Warning) %>%
   pivot_wider(names_from = Assay,
               values_from = NPX) %>% 
-  dplyr::rename(plateID_INF = PlateID) %>% 
-  dplyr::distinct(SampleID, .keep_all = TRUE) # removes duplicate bridging samples
+  dplyr::rename(plateID_INF = PlateID) 
 
 ```
 
@@ -215,16 +228,20 @@ INF_wide <- INF_qc %>%
 
 ## Merge CVDII + INF Panels
 olink_df <- INF_wide %>%
-  dplyr::select(-IL6, - CXCL1, -SCF, -IL18, -FGF21, -FGF23, -CCL3) %>% # Remove 7 duplicate proteins from INF panel
   dplyr::full_join(CVD_wide) %>%
   dplyr::rename(blood_sample_ID = SampleID) %>%
-  dplyr::select(-QC_Warning) %>%
-  dplyr::mutate(batch_INF = str_extract(plateID_INF, '[^-]\\w+')) %>%
-  dplyr::mutate(batch_CVDII = str_extract(plateID_CVDII, '[^-]\\w+')) %>%
-  dplyr::relocate(blood_sample_ID, batch_INF, plateID_INF, batch_CVDII, plateID_CVDII)
+  dplyr::mutate(batch_INF = as.factor(str_extract(plateID_INF, '[^-]\\w+'))) %>%
+  dplyr::mutate(batch_CVDII = as.factor(str_extract(plateID_CVDII, '[^-]\\w+'))) %>%
+  dplyr::relocate(blood_sample_ID, batch_INF, batch_CVDII, plateID_INF, plateID_CVDII, QC_Warning) %>% 
+  dplyr::mutate(plateID_INF = as.factor(plateID_INF),
+                plateID_CVDII = as.factor(plateID_CVDII),
+                QC_Warning = as.factor(QC_Warning)) %>% 
+  dplyr::distinct(blood_sample_ID, .keep_all = TRUE)
+  
+str(olink_df)
 
 ## Save QC'd Data
-write.table(olink_df, file = here::here("data/olink_CVDII_INF_baseline_plasma_wide.txt"), sep = "\t", quote = F)
+write.table(olink_df, file = here::here("data/olink_CVDII_INF_baseline_plasma_wide_20.txt"), sep = "\t", quote = F)
 
 ```
 
@@ -233,11 +250,12 @@ write.table(olink_df, file = here::here("data/olink_CVDII_INF_baseline_plasma_wi
 ## Creating a panel metadata file
 metadata <- INF_qc %>% # using the df in the long format
   dplyr::full_join(CVD_qc) %>% # This is merging with the CVD panel
-  dplyr::group_by(Assay) %>%
-  dplyr::select(UniProt, OlinkID, LOD, Panel, Panel_Version, MissingFreq) %>% #These I think would be important to include
-  dplyr::distinct(Assay, .keep_all = TRUE) # This keeps one value for each protein in the long format
+  dplyr::group_by(Assay, Project) %>%
+  dplyr::select(UniProt, OlinkID, LOD, Panel, Panel_Version, MissingFreq, GlobMissFreq) %>% # These I think would be important to include
+  dplyr::distinct(Assay, .keep_all = TRUE) %>% # This keeps one value for each protein in the long format
+  arrange(Assay)
 
 ## Save metadata
-write.table(metadata, file = here::here("data/olink_panel_metadata.txt"), sep = "\t", quote = F)
+write.table(metadata, file = here::here("data/olink_panel_metadata_20.txt"), sep = "\t", quote = F)
 
 ```
